# llm-calibration-token-efficiency

./: .env.example  .gitignore  README.md  pyproject.toml  slides.html  slides.pptx  speaker-notes.md
.github/workflows/: deploy-pages.yml
docs/: advisor-meeting-2026-07-04.md  feasibility-analysis-2026-07-12.md  literature-survey-process-mining-2026-07-12.md  literature-survey-token-direction-2026-07-01.md  process-mining-key-papers-summary.md
docs/book/: README.md  reading-notes.md
docs/pilot-pm-llm-2026-07-14/: REPORT.md
docs/zh-TW/: advisor-meeting-2026-07-04.md  agent-handoff-2026-07-24.md  feasibility-analysis-2026-07-12.md  literature-survey-process-mining-2026-07-12.md  literature-survey-token-direction-2026-07-01.md  process-mining-key-papers-summary.md
experiments/v1-pilot/: create_slides.py  generate_figures.py  pilot_pm_analysis.py  pilot_real_experiment.py  slides.html
experiments/v1-pilot/analysis_results/: path_quality_metrics.csv
experiments/v1-pilot/report/: REPORT_zh-TW.md  conformance.json  path_quality_metrics.csv  raw_responses.json  traces.json
experiments/v2-mmlu-arc/: analysis_utils.py  confidence_utils.py  experiment_v2.py  finish_pm.py  gen_summary.py  generate_v2_figures.py  rerun_confidence.py  run_conformance_deepseek_ref.py  run_entropy_step_analysis.py  run_pm_analysis.py  run_pm_step4.py
experiments/v2-mmlu-arc/report/: REPORT.md  REPORT_zh-TW.md  make_presentation.py  (+2 more)
pilot_results/: conformance.json  traces.json
scripts/: check_environment.py  check_v2_results.py
tests/: test_project_environment.py
(+3 files in other folders)
