[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-calibration-token-efficiency"
version = "0.1.0"
description = "Research experiments for LLM calibration, reasoning traces, and token efficiency."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets==5.0.0",
    "matplotlib==3.11.1",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "pm4py==2.7.23.3",
    "python-pptx==1.0.2",
    "scipy==1.18.0",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "ruff==0.12.5",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

